# ChangeLog for dev-db/postgresql-server
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.88 2010/12/31 15:38:42 hwoarang Exp $

  31 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  postgresql-server-8.1.22.ebuild, postgresql-server-8.2.18.ebuild,
  postgresql-server-8.3.12.ebuild, postgresql-server-8.4.5.ebuild:
  Stable on amd64 wrt bug #339935

  18 Dec 2010; Jeroen Roovers <jer@gentoo.org>
  postgresql-server-8.1.21-r1.ebuild, postgresql-server-8.1.22.ebuild,
  postgresql-server-8.2.18.ebuild, postgresql-server-8.3.12.ebuild,
  postgresql-server-8.4.5.ebuild:
  Stable for HPPA PPC (bug #339935).

  02 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  postgresql-server-8.1.22.ebuild, postgresql-server-8.2.18.ebuild,
  postgresql-server-8.3.12.ebuild, postgresql-server-8.4.5.ebuild:
  stable x86, security bug 339935

*postgresql-server-9.0.1 (06 Oct 2010)
*postgresql-server-8.4.5 (06 Oct 2010)
*postgresql-server-8.3.12 (06 Oct 2010)
*postgresql-server-8.2.18 (06 Oct 2010)
*postgresql-server-8.1.22 (06 Oct 2010)

  06 Oct 2010; Patrick Lauer <patrick@gentoo.org>
  +postgresql-server-8.1.22.ebuild, +postgresql-server-8.2.18.ebuild,
  +postgresql-server-8.3.12.ebuild, +postgresql-server-8.4.5.ebuild,
  +postgresql-server-9.0.1.ebuild:
  Bump

  05 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  postgresql-server-9.0.0.ebuild:
  Tiny update for linguas and nls handling.

  21 Sep 2010; Patrick Lauer <patrick@gentoo.org>
  -postgresql-server-9.0_beta4.ebuild, -postgresql-server-9.0_rc1.ebuild:
  Remove old

  20 Sep 2010; Patrick Lauer <patrick@gentoo.org>
  postgresql-server-9.0.0.ebuild:
  Fixing elog messages

*postgresql-server-9.0.0 (19 Sep 2010)

  19 Sep 2010; Patrick Lauer <patrick@gentoo.org>
  +postgresql-server-9.0.0.ebuild:
  Bump to 9.0.0 final

*postgresql-server-9.0_rc1 (02 Sep 2010)

  02 Sep 2010; Patrick Lauer <patrick@gentoo.org>