@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-server
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.88 2010/12/31 15:38:42 hwoarang Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.89 2011/01/02 15:28:19 klausman Exp $
+
+  02 Jan 2011; Tobias Klausmann <klausman@gentoo.org>
+  postgresql-server-8.1.22.ebuild:
+  Stable on alpha, bug #347223
 
   31 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
   postgresql-server-8.1.22.ebuild, postgresql-server-8.2.18.ebuild,
